--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -610,6 +610,10 @@
     <string name="faq_6_text_commons">일부 런처는 앱 아이콘 커스터마이징을 제대로 지원하지 않아 앱의 아이콘이 사라질 수 있습니다. 이런 경우에는 플레이 스토어나 위젯을 통하여 앱을 실행한 뒤 기본값인 주황색(#F57C00)으로 다시 변경해주시기 바랍니다. 최악의 경우에는 앱을 재설치 해야할 수도 있습니다.</string>
     <string name="faq_7_title_commons">앱 결제를 완료했는데 앱을 다운받을 수 없습니다. 어떻게 해야 하나요?</string>
     <string name="faq_7_text_commons">앱의 결제는 구글이 관리합니다. 때때로 구글의 시스템에서 오류가 발생할 수도 있습니다. 플레이스토어 앱의 캐시를 지우고, 다시 다운받아 보시기 바랍니다.</string>
+    <string name="faq_8_title_commons">Why should I upgrade to the Pro version?</string>
+    <string name="faq_8_text_commons">As your app version is no longer updated, the bugs you have maybe spotted will never be fixed. There will also be no new functions added. You can purchase the Pro version on Google Play for a small sum of money.
+        It is a one time payment, which means that once you purchase it, you will never have to pay again. Not even after getting a new device. If you won\'t like the Pro version, you can just uninstall it within a few hours and you will automatically get your money back.
+        If you want a refund anytime later, just contact us at hello@simplemobiletools.com and you will get it.</string>
 
     <!-- License -->
     <string name="notice">이 앱은 삶을 간편하게 만들어주는 다음의 서드파티 라이브버리를 사용합니다. 감사합니다.</string>
